test_suite/tests/ui/default-attribute/nameless_struct_fields_path.stderr
error: #[serde(default = "...")] can only be used on structs with named fields
 --> $DIR/nameless_struct_fields_path.rs:5:9
  |
5 | struct T(u8, u8);
  |         ^^^^^^^^

error: aborting due to previous error

